Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0 Beta 2, 5.0.0 RC 1, 5.0.0 RC 2, 5.0.0
-
None
-
Windows
-
b604d96ba8cb4b20f3a27537c591a7777e485d0e
Description
The directshow mediaservice plugin is missing from the plugins folder, so the Camera example gives "The camera service is missing" message.
Attachments
Issue Links
- relates to
-
QTBUG-29172 dsengine.dll plugin for camera does not play nicely with rest. If used, video won't work (dsengine.dll / DirectShow)
-
- Closed
-
-
QTBUG-29175 Implement camera support in the WMF plugin
-
- Closed
-