src/plugins/directshow/camera/dscamerasession.h
@@ -69,7 +69,6 @@
 #define __IDxtAlphaSetter_INTERFACE_DEFINED__
 #define __IDxtJpeg_INTERFACE_DEFINED__
 #define __IDxtKey_INTERFACE_DEFINED__
-#include <qedit.h>
 
 struct ICaptureGraphBuilder2;
 struct ISampleGrabber;
